--- a/culinary_cloud_ai/applications/recipes/templates/recipes/recipe_container.html
+++ b/culinary_cloud_ai/applications/recipes/templates/recipes/recipe_container.html
@@ -1,8 +1,7 @@
-{# this is just one recipe card, to be included in lists #}
 {% load static %}
 
 <a href="{{ recipe.get_absolute_url }}" class="recipe-card">
-  <!-- front of card: image, title, stats -->
+
   <div class="card-front">
     {% if recipe.recipe_image %}
       <img src="{{ recipe.recipe_image.url }}" alt="{{ recipe.title }}">
@@ -16,12 +15,15 @@
     </div>
   </div>
 
-  <!-- back of card: description, initially hidden -->
+  <img
+    src="{{ recipe.recipe_owner.profile_image.url }}"
+    alt="{{ recipe.recipe_owner.username }}'s avatar"
+    class="recipe-card__avatar"
+  />
+
   <div class="recipe-card__overlay">
     <p class="card__title">{{ recipe.title }}</p>
-    <p class="card__description">
-      {{ recipe.description }}
-    </p>
+    <p class="card__description">{{ recipe.description }}</p>
   </div>
-</a>
 
+</a>
