--- a/culinary_cloud_ai/applications/recipes/templates/recipes/home.html
+++ b/culinary_cloud_ai/applications/recipes/templates/recipes/home.html
@@ -8,7 +8,11 @@
   <h1>Welcome, {% if user.is_authenticated %}{{ user.username }}{% else %}Chef{% endif %}!</h1>
   <p>Generate, browse, and share delicious recipes powered by AI.</p>
   <div class="home-cta">
-    <a href="{% url 'recipes:generate_combined' %}" class="btn-primary">Generate a Recipe</a>
+    {% if user.is_authenticated %}
+      <a href="{% url 'recipes:generate_combined' %}" class="btn-primary">Generate a Recipe</a>
+    {% else %}
+      <a href="{% url 'login' %}?next={% url 'recipes:generate_combined' %}" class="btn-primary">Generate a Recipe</a>
+    {% endif %}
     <a href="{% url 'recipes:recipe-list' %}"  class="btn-secondary">Browse Recipes</a>
   </div>
 </div>
