--- a/culinary_cloud_ai/config/templates/base.html
+++ b/culinary_cloud_ai/config/templates/base.html
@@ -16,7 +16,11 @@
 
       {# Main links #}
       <a href="{% url 'recipes:home' %}">Home</a>
-      <a href="{% url 'recipes:generate_combined' %}">Try to generate</a>
+      {% if user.is_authenticated %}
+        <a href="{% url 'recipes:generate_combined' %}">Try to generate</a>
+      {% else %}
+        <a href="{% url 'login' %}?next={% url 'recipes:generate_combined' %}">Try to generate</a>
+      {% endif %}
       <a href="{% url 'recipes:recipe-list' %}">Recipes</a>
       {% if user.is_authenticated %}
         <a href="{% url 'logout' %}">Logout</a>
