--- a/culinary_cloud_ai/applications/recipe_user/templates/recipe_user/recipe_container.html
+++ b/culinary_cloud_ai/applications/recipe_user/templates/recipe_user/recipe_container.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 <a href="{{ recipe.get_absolute_url }}" class="recipe-card">
+    
     {% if recipe.recipe_image %}
         <img src="{{ recipe.recipe_image.url }}" alt="{{ recipe.title }}">
     {% else %}
@@ -10,7 +11,9 @@
     <h2>{{ recipe.title }}</h2>
     <p>{{ recipe.short_description }}</p>
     <div class="stats">
-        <span>Likes: {{ recipe.like_count }}</span>
-        <span>Comments: {{ recipe.comments_count }}</span>
+        <span>❤️ {{ recipe.like_count }}</span>
+        <span>💬 {{ recipe.comments_count }}</span>
     </div>
+    
+
 </a>
